// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor actions should change mode to Html 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "mode": "Html",
      },
      "type": "EDITOR_CHANGE_SETTING",
    },
  ],
]
`;

exports[`Editor actions should changeDiffViewType 1`] = `
Array [
  Array [
    Object {
      "payload": "unified",
      "type": "EDITOR_CHANGE_DIFF_VIEW",
    },
  ],
]
`;

exports[`Editor actions should changeEditorValue 1`] = `
Array [
  Array [
    Object {
      "payload": "</>",
      "type": "EDITOR_CHANGE_VALUE",
    },
  ],
]
`;

exports[`Editor actions should changeTab 1`] = `
Array [
  Array [
    Object {
      "payload": "diff",
      "type": "EDITOR_CHANGE_TAB",
    },
  ],
]
`;

exports[`Editor actions should dismissErrorToast 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "errorText": "",
        "showError": false,
      },
      "type": "EDITOR_DISMISS_ERROR",
    },
  ],
]
`;

exports[`Editor actions should importFile 1`] = `Array []`;

exports[`Editor actions should initializeEditor 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "hosts": Object {
          "host2": 2,
          "host3": 3,
        },
        "isMasked": false,
        "isRendering": false,
        "readOnly": true,
        "selectedView": "input",
        "showError": false,
        "value": "<? />",
      },
      "type": "EDITOR_INITIALIZE",
    },
  ],
]
`;

exports[`Editor actions should initializeEditor unlocked 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "hosts": Object {
          "host2": 2,
          "host3": 3,
        },
        "isRendering": false,
        "readOnly": false,
        "renderedValue": "",
        "selectedView": "input",
        "showError": false,
        "value": "<? />",
      },
      "type": "EDITOR_INITIALIZE",
    },
  ],
]
`;

exports[`Editor actions should previewTemplate and fail 1`] = `Array []`;

exports[`Editor actions should previewTemplate and succeed 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "renderedValue": "< renderedData />",
      },
      "type": "EDITOR_EXEC_PREVIEW",
    },
  ],
]
`;

exports[`Editor actions should revertChanges 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "value": "<template />",
      },
      "type": "EDITOR_REVERT_CHANGES",
    },
  ],
]
`;

exports[`Editor actions should toggleMaskValue 1`] = `
Object {
  "type": "EDITOR_TOGGLE_MASK",
}
`;

exports[`Editor actions should toggleModal 1`] = `
Object {
  "type": "EDITOR_MODAL_TOGGLE",
}
`;

exports[`Editor actions should toggleRenderView 1`] = `
Object {
  "type": "EDITOR_TOGGLE_RENDER_VIEW",
}
`;
